--- a/Trabalho_ProgComp/Trabalho_ProgComp/Trabalho_ProgComp.vcxproj
+++ b/Trabalho_ProgComp/Trabalho_ProgComp/Trabalho_ProgComp.vcxproj
@@ -18,22 +18,12 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="Bot.cpp" />
-    <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Text.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Bot.h" />
-    <ClInclude Include="Text.h" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{3305493b-8436-4940-9e8d-ce32f3e3c22b}</ProjectGuid>
-    <RootNamespace>ProgComp</RootNamespace>
+    <ProjectGuid>{9219ebc0-03df-4e87-b99a-5ae7d2a73522}</ProjectGuid>
+    <RootNamespace>TrabalhoProgComp</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>Trabalho_Pratico_2_Hellano</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -127,13 +117,23 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalOptions>/execution-charset:.850 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="bit.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="Random.cpp" />
+    <ClCompile Include="tela.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="bit.h" />
+    <ClInclude Include="Random.h" />
+    <ClInclude Include="Tela.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
